crates/pgls_pretty_print/tests/snapshots/single/tests__alter_collation_stmt_0_60.snap
---
source: crates/pgt_pretty_print/tests/tests.rs
input_file: crates/pgt_pretty_print/tests/data/single/alter_collation_stmt_0_60.sql
snapshot_kind: text
---
ALTER COLLATION myschema.mycollation REFRESH VERSION;
